  definition &c). Any reports about inaccuracies in the documentation are
  welcome (and due to using the simple Doxygen syntax it is now easier than
  ever to submit patches correcting them! :-)

- Support for persistent objects automatically saving and restoring their state
  was added.


2.9.2:
------

All:

- Added "rest" argument to wxString::Before{First,Last}().

All (GUI):

- Added wxRichMessageDialog (Rickard Westerlund, GSoC 2010 project).
- Added wxCommandLinkButton (Rickard Westerlund, GSoC 2010 project).
- Added wxUIActionSimulator (Steven Lamerton, GSoC 2010 project).
- wxAUI: support auto-orientable toolbars (wsu).
- Added wxDataViewCtrl::Set/GetCurrentItem().
- wxHTML: render in RTL order inside RTL window (Richard Bullington-McGuire).
- wxRibbon: added EVT_RIBBONGALLERY_CLICKED event (John Roberts).
- Add support for CP-866 encoding to wxEncodingConverter (madnut).
- Consistency fixes for keyboard events across all major ports.
- Added EVT_RIBBONBAR_TAB_LEFT_DCLICK event (snowleopard).
- Fix display of right aligned columns in wxGenericListCtrl (jl).
- Restore text drag-and-drop in wxSTC broken by Scintilla 2 update (Jens Lody).
- Improve wxGTK print/page setup dialog (rafravago).

MSW:

- Native implementation of wxHyperlinkCtrl and wxProgressDialog under modern
  Windows versions (Rickard Westerlund, GSoC 2010 project).
- Fix Cygwin 1.7 build (David Gangola).
- Allow using wxDC::DrawText() with multiline texts.
- Fix wxBitmapButton best size determination broken in 2.9.1.



2.9.1:
------

INCOMPATIBLE CHANGE SINCE 2.9.0

- wxStandardPaths doesn't use vendor name by default under MSW and OSX to
  remain compatible with 2.8 behaviour but this makes it incompatible with
  2.9.0. Please use UseAppInfo(AppInfo_AppName | AppInfo_VendorName) explicitly
  to use the vendor name in the paths returned by wxStandardPaths.

- wxDataViewModel::GetAttr() is now const, as it should have been from the very